syntax = "proto3";
package cosmos.authn.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/authn";

message Account {
    string address = 1;
    google.protobuf.Any credential = 2;
    uint64 account_number = 3;
    uint64 sequence       = 4;
}
