syntax = "proto3";
package cosmos.crypto.secp256r1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/crypto/keys/secp256r1";

// PubKey defines a secp256r1 public key
message PubKey {
  option (gogoproto.goproto_stringer) = false;

  bytes key = 1 [(gogoproto.casttype) = "crypto/secp256r1.PublicKey"];
}

// PrivKey defines a secp256r1 private key
message PrivKey {
  bytes key = 1 [(gogoproto.casttype) = "crypto/secp256r1.PrivateKey"];
}
